Added archiving capability. Tweaked design to enhance archiving ability. Updated logo. Moved some of the controls around.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -37,7 +37,8 @@
 		<pages>
 			<controls>
 				<add tagPrefix="lng" src="~/Controls/Login.ascx" tagName="login"/>
-				<add tagPrefix="lng" src="~/Controls/HillellisContent.ascx" tagName="content"/>
+				<add tagPrefix="lng" src="~/Controls/Blog/Content.ascx" tagName="content"/>
+				<add tagPrefix="lng" src="~/Controls/Blog/Archives.ascx" tagName="archives"/>
 			</controls>
 		</pages>
 	</system.web>
