--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -76,7 +76,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:46.8743952-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:52.9458704-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -228,7 +228,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:30.0759264-04:00</dateTime>
+        <dateTime>2007-06-02T17:19:53.1475984-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -308,7 +308,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:16:07.0648656-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:53.686936-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -516,7 +516,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:07.5870544-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:52.4780736-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -612,7 +612,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:08.1078032-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:52.6783616-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -620,7 +620,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:47.0246112-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:53.1061008-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -628,7 +628,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:47.1848416-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:53.336432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -644,7 +644,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:47.5153168-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:19.3652976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -652,7 +652,7 @@
         <string>\thehillellis\images</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:31.4839648-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:55.04176-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -676,7 +676,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:12.4440384-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:56.5339056-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -684,7 +684,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:13.0549168-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:57.2349136-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -692,7 +692,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:13.6557808-04:00</dateTime>
+        <dateTime>2007-06-02T17:16:57.8357776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -764,7 +764,7 @@
         <string>\thehillellis\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:25.7697344-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:24.2523248-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -772,7 +772,7 @@
         <string>\thehillellis\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:26.3705984-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:24.9032608-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -788,7 +788,7 @@
         <string>\thehillellis\images\logo.png</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:32:05.827072-04:00</dateTime>
+        <dateTime>2007-06-02T17:17:05.0461456-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -804,7 +804,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:22.6710304-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:27.9313392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -812,7 +812,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:49.5382256-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:28.5322032-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -820,7 +820,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:23.8827728-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:29.1430816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5300,7 +5300,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:12:18.3948816-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:19.7959168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5316,7 +5316,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:12:19.806912-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:25.8045568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5324,7 +5324,7 @@
         <string>\thehillellis\permalink.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:21.0687264-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:26.4054208-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5332,7 +5332,7 @@
         <string>\thehillellis\permalink.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:21.6896192-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:27.0300432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5396,7 +5396,7 @@
         <string>\app_code\domain\blog\archive.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:48.2263392-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:54.4981024-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5404,7 +5404,7 @@
         <string>\app_code\domain\blog\archives.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:23:48.847232-04:00</dateTime>
+        <dateTime>2007-06-02T17:49:55.0989664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5412,7 +5412,7 @@
         <string>\thehillellis\archive.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:16:08.9175296-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:23.0005248-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5420,7 +5420,55 @@
         <string>\thehillellis\archive.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:19.356264-04:00</dateTime>
+        <dateTime>2007-06-02T17:21:23.6013888-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\blog</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:49:53.8571808-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\blog\archives.ascx</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:49:55.8099888-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\blog\archives.ascx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:21:21.0877744-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\blog\content.ascx</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:21:21.6886384-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\blog\content.ascx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:21:22.2895024-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\logo_t.png</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T17:17:05.9474416-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
