--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -44,6 +44,7 @@
     <Filter>*\bin\*.xml</Filter>
     <Filter>todo.txt</Filter>
     <Filter>*.gz</Filter>
+    <Filter>*\Sql</Filter>
   </IgnoreFilters>
   <UploadAssemblyWhenCs>true</UploadAssemblyWhenCs>
   <UploadLog>
@@ -76,7 +77,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:52.9458704-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:38.1774448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -516,7 +517,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:52.4780736-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:38.357704-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -612,7 +613,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:52.6783616-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:38.5179344-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -620,7 +621,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:53.1061008-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:39.108784-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -628,7 +629,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:53.336432-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:39.2690144-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -644,7 +645,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:19.3652976-04:00</dateTime>
+        <dateTime>2007-06-02T23:07:03.3636608-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -676,7 +677,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:56.5339056-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:40.610944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -684,7 +685,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:57.2349136-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:41.211808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -692,7 +693,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:57.8357776-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:41.8226864-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5356,7 +5357,7 @@
         <string>\app_code\domain\blog\entries</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:09.3996608-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:39.4292448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5380,7 +5381,7 @@
         <string>\app_code\domain\blog\entries\entriesfactory.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:16.652376-04:00</dateTime>
+        <dateTime>2007-06-02T23:05:42.5036656-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5469,6 +5470,14 @@
       </key>
       <value>
         <dateTime>2007-06-02T17:17:05.9474416-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\feed.ashx</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T23:07:03.9244672-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
