Added RSS image to the master page.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -645,7 +645,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:07:03.3636608-04:00</dateTime>
+        <dateTime>2007-06-02T23:38:59.8085488-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -653,7 +653,7 @@
         <string>\thehillellis\images</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:16:55.04176-04:00</dateTime>
+        <dateTime>2007-06-02T23:39:00.2091248-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -805,7 +805,7 @@
         <string>\thehillellis\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:27.9313392-04:00</dateTime>
+        <dateTime>2007-06-02T23:39:01.7313136-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -813,7 +813,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:28.5322032-04:00</dateTime>
+        <dateTime>2007-06-02T23:39:02.3622208-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5478,6 +5478,14 @@
       </key>
       <value>
         <dateTime>2007-06-02T23:07:03.9244672-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\rss.png</string>
+      </key>
+      <value>
+        <dateTime>2007-06-02T23:39:00.8300176-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
