Update the feed hanlder because SQL dependency caching isn't working like I thought it would.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -645,7 +645,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:38:59.8085488-04:00</dateTime>
+        <dateTime>2007-06-03T12:16:53.8499808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5477,7 +5477,7 @@
         <string>\thehillellis\feed.ashx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:07:03.9244672-04:00</dateTime>
+        <dateTime>2007-06-03T12:16:54.480888-04:00</dateTime>
       </value>
     </item>
     <item>
