Disable Google Analytics until the files are pushed live. Add minimal.css theme.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -27,6 +27,26 @@
       <LookFor>&lt;add key="timezoneDifference" value="0" /&gt;</LookFor>
       <ReplaceWith>&lt;add key="timezoneDifference" value="3" /&gt;</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\TheHillellis\TheHillellis.master</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\default.html</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Software\index.html</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\TheHillellis\index.html</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -53,7 +73,7 @@
         <string>\software</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:16.685824-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:47.6809792-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -237,7 +257,7 @@
         <string>\software\index.html</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:46:23.7026448-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:52.7282368-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -645,7 +665,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-03T12:16:53.8499808-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:48.0414976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -813,7 +833,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:39:02.3622208-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:57.8355808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -821,7 +841,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:29.1430816-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:58.4364448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5301,7 +5321,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:19.7959168-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:50.7954576-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5317,7 +5337,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:25.8045568-04:00</dateTime>
+        <dateTime>2007-06-10T21:45:56.8341408-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5486,6 +5506,62 @@
       </key>
       <value>
         <dateTime>2007-06-02T23:39:00.8300176-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\css</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:48.7825632-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\css\themes</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:50.2646944-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\default.html</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:51.5265088-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\css\styles.css</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:53.8298208-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\css\themes\minimal.css</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:54.5308288-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\css\themes\spring.css</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:55.1316928-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\index.html</string>
+      </key>
+      <value>
+        <dateTime>2007-06-10T21:45:55.8327008-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
