--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -97,7 +97,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:38.1774448-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:02.0372064-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -129,7 +129,7 @@
         <string>\app_code\amazoninfo.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:27.7955232-04:00</dateTime>
+        <dateTime>2007-06-13T00:11:37.205224-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -137,7 +137,7 @@
         <string>\app_code\constants.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:28.3963872-04:00</dateTime>
+        <dateTime>2007-06-13T00:11:37.806088-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -169,7 +169,7 @@
         <string>\app_code\searchtype.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:36.2076192-04:00</dateTime>
+        <dateTime>2007-06-13T00:11:38.406952-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -193,7 +193,7 @@
         <string>\app_code\wittisms.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:36.8084832-04:00</dateTime>
+        <dateTime>2007-06-13T00:11:39.007816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -265,7 +265,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:10.07344-04:00</dateTime>
+        <dateTime>2007-06-13T00:05:27.32336-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -329,7 +329,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:53.686936-04:00</dateTime>
+        <dateTime>2007-06-13T00:23:16.160272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -537,7 +537,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:38.357704-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:28.9044608-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -553,7 +553,7 @@
         <string>\app_code\data\admin.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:20.0815552-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:32.038968-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -561,7 +561,7 @@
         <string>\app_code\data\base.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-28T14:08:11.6529008-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:32.9302496-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -569,7 +569,7 @@
         <string>\app_code\data\download.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:44.3124112-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:35.544008-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -577,7 +577,7 @@
         <string>\app_code\data\indielyrics.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:45.2137072-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:36.3551744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -633,7 +633,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:38.5179344-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:29.3951664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -641,7 +641,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:39.108784-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:02.1974368-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -649,7 +649,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:39.2690144-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:02.3676816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -657,7 +657,7 @@
         <string>\app_code\domain\membership</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:11.9060752-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:31.3579888-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -665,7 +665,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:48.0414976-04:00</dateTime>
+        <dateTime>2007-06-13T00:28:00.0785264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -673,7 +673,7 @@
         <string>\thehillellis\images</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:39:00.2091248-04:00</dateTime>
+        <dateTime>2007-06-13T00:05:30.628112-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -689,7 +689,7 @@
         <string>\admin\thehillellis.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:19.3605184-04:00</dateTime>
+        <dateTime>2007-06-13T00:05:32.3005168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -697,7 +697,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:40.610944-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:33.641272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -705,7 +705,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:41.211808-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:34.2521504-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -713,7 +713,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:41.8226864-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:34.843-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -721,7 +721,7 @@
         <string>\app_code\data\membership.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:45.8145712-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:36.946024-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -737,7 +737,7 @@
         <string>\app_code\domain\blog\entry.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T18:58:43.6754816-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:08.5265376-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -745,7 +745,7 @@
         <string>\app_code\domain\membership\siteuser.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:23.6667104-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:42.954664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -753,7 +753,7 @@
         <string>\app_code\domain\membership\siteusers.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:48.902736-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:43.555528-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -761,7 +761,7 @@
         <string>\app_code\domain\membership\usertype.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-20T16:31:49.5036-04:00</dateTime>
+        <dateTime>2007-06-13T00:08:44.156392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -785,7 +785,7 @@
         <string>\thehillellis\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:24.2523248-04:00</dateTime>
+        <dateTime>2007-06-13T00:23:18.313368-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -793,7 +793,7 @@
         <string>\thehillellis\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:24.9032608-04:00</dateTime>
+        <dateTime>2007-06-13T00:23:18.914232-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -833,7 +833,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:57.8355808-04:00</dateTime>
+        <dateTime>2007-06-13T00:10:36.01724-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -841,7 +841,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:58.4364448-04:00</dateTime>
+        <dateTime>2007-06-13T00:21:17.038984-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5321,7 +5321,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:50.7954576-04:00</dateTime>
+        <dateTime>2007-06-13T00:28:00.6593616-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5337,7 +5337,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:56.8341408-04:00</dateTime>
+        <dateTime>2007-06-13T00:28:02.922616-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5345,7 +5345,7 @@
         <string>\thehillellis\permalink.aspx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:26.4054208-04:00</dateTime>
+        <dateTime>2007-06-13T00:10:34.4049216-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5353,7 +5353,7 @@
         <string>\thehillellis\permalink.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:27.0300432-04:00</dateTime>
+        <dateTime>2007-06-13T00:10:35.416376-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5377,7 +5377,7 @@
         <string>\app_code\domain\blog\entries</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:39.4292448-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:02.9385024-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5385,7 +5385,7 @@
         <string>\app_code\domain\blog\entries\adamentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:20.75252-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:05.932808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5393,7 +5393,7 @@
         <string>\app_code\domain\blog\entries\baseentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:14:06.5083136-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:06.533672-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5401,7 +5401,7 @@
         <string>\app_code\domain\blog\entries\entriesfactory.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T23:05:42.5036656-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:07.23468-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5409,7 +5409,7 @@
         <string>\app_code\domain\blog\entries\lynnentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:22.5651264-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:07.835544-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5417,7 +5417,7 @@
         <string>\app_code\domain\blog\archive.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:54.4981024-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:04.630936-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5425,7 +5425,7 @@
         <string>\app_code\domain\blog\archives.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:55.0989664-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:05.2318-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5449,7 +5449,7 @@
         <string>\controls\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:53.8571808-04:00</dateTime>
+        <dateTime>2007-06-13T00:23:16.3305168-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5473,7 +5473,7 @@
         <string>\controls\blog\content.ascx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:21.6886384-04:00</dateTime>
+        <dateTime>2007-06-13T00:12:04.244104-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5481,7 +5481,7 @@
         <string>\controls\blog\content.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:22.2895024-04:00</dateTime>
+        <dateTime>2007-06-13T00:23:17.61236-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5497,7 +5497,7 @@
         <string>\thehillellis\feed.ashx</string>
       </key>
       <value>
-        <dateTime>2007-06-03T12:16:54.480888-04:00</dateTime>
+        <dateTime>2007-06-13T00:10:33.713928-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5513,7 +5513,7 @@
         <string>\thehillellis\css</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:48.7825632-04:00</dateTime>
+        <dateTime>2007-06-13T00:28:00.2387568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5521,7 +5521,7 @@
         <string>\thehillellis\css\themes</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:50.2646944-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:03.9499568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5537,7 +5537,7 @@
         <string>\thehillellis\css\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:53.8298208-04:00</dateTime>
+        <dateTime>2007-06-13T00:28:01.6307584-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5545,7 +5545,7 @@
         <string>\thehillellis\css\themes\minimal.css</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:54.5308288-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:10.73972-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5553,7 +5553,7 @@
         <string>\thehillellis\css\themes\spring.css</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:55.1316928-04:00</dateTime>
+        <dateTime>2007-06-13T00:13:11.340584-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5562,6 +5562,22 @@
       </key>
       <value>
         <dateTime>2007-06-10T21:45:55.8327008-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\logo_minimal.png</string>
+      </key>
+      <value>
+        <dateTime>2007-06-13T00:05:40.692584-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\themetype.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-13T00:13:09.137416-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
