--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <configuration xmlns="http://schemas.microsoft.com/.NetConfiguration/v2.0">
 	<appSettings>
-		<add key="Amazon.AWSECommerceService" value="http://soap.amazon.com/onca/soap?Service=AWSECommerceService" />
+		<add key="Amazon.AWSECommerceService" value="http://soap.amazon.com/onca/soap?Service=AWSECommerceService"/>
 		<add key="encryptConnectionStrings" value="false" />
 		<add key="timezoneDifference" value="0" />
 	</appSettings>
 	
 	<connectionStrings>
-		<remove name="longueurConnectionString" />
-		<add name="longueurConnectionString" connectionString="Data Source=ADAM-WIN;Initial Catalog=Longueur;Integrated Security=True" />
+		<remove name="longueurConnectionString"/>
+		<add name="longueurConnectionString" connectionString="Data Source=SLIM\SQLEXPRESS;Initial Catalog=Longueur;Integrated Security=True"/>
 	</connectionStrings>
 	
 	<system.web>
