Update the deploy.config file.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <DeployConfig>
-  <CompilationMode>InPlaceCompilation</CompilationMode>
   <SavePassword>true</SavePassword>
   <FtpServerOs>215 UNIX Type: L8</FtpServerOs>
   <FtpServerType>Serv-U FTP-Server v2.5i for WinSock ...</FtpServerType>
   <Validated>true</Validated>
-  <MsFtpUserPre>false</MsFtpUserPre>
   <StringReplacements>
     <StringReplacement>
       <FilePattern>\Web.Config</FilePattern>
-      <LookFor>Data Source=ADAM-WIN;Initial Catalog=Longueur;Integrated Security=True</LookFor>
+      <LookFor>Data Source=SLIM\SQLEXPRESS;Initial Catalog=Longueur;Integrated Security=True</LookFor>
       <ReplaceWith>Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss</ReplaceWith>
     </StringReplacement>
     <StringReplacement>
@@ -66,14 +64,13 @@
     <Filter>*.gz</Filter>
     <Filter>*\Sql</Filter>
   </IgnoreFilters>
-  <UploadAssemblyWhenCs>true</UploadAssemblyWhenCs>
   <UploadLog>
     <item>
       <key>
         <string>\software</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:47.6809792-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:16.685824-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -97,7 +94,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:02.0372064-04:00</dateTime>
+        <dateTime>2007-06-24T21:09:31.3080256-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -129,7 +126,7 @@
         <string>\app_code\amazoninfo.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:11:37.205224-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:27.7955232-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -137,7 +134,7 @@
         <string>\app_code\constants.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:11:37.806088-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:28.3963872-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -169,7 +166,7 @@
         <string>\app_code\searchtype.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:11:38.406952-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:36.2076192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -193,7 +190,7 @@
         <string>\app_code\wittisms.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:11:39.007816-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:36.8084832-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5585,6 +5582,6 @@
   <FtpServer> ftp.longueur.org</FtpServer>
   <FtpUserID>adparadox</FtpUserID>
   <FtpPassword>Me1Vd3c1M4Q=</FtpPassword>
-  <FtpPassive>false</FtpPassive>
-  <FtpRemotePath>/c:/hosting/webhost4life/member/adparadox</FtpRemotePath>
+  <FtpPassive>true</FtpPassive>
+  <FtpRemotePath />
 </DeployConfig>
