--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -94,7 +94,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-06-24T21:09:31.3080256-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:08.8142432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -118,7 +118,7 @@
         <string>\bin</string>
       </key>
       <value>
-        <dateTime>2007-05-21T22:50:19.9987568-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:10.6969504-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -214,7 +214,7 @@
         <string>\bin\common.dll</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:16.2877344-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:17.997448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -534,7 +534,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:28.9044608-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:08.9143872-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -558,7 +558,7 @@
         <string>\app_code\data\base.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:32.9302496-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:15.994568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -630,7 +630,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:29.3951664-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:09.0445744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -638,7 +638,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:02.1974368-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:10.336432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -646,7 +646,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:02.3676816-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:10.4465904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -694,7 +694,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:33.641272-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:11.688376-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -710,7 +710,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:34.843-04:00</dateTime>
+        <dateTime>2007-06-24T23:09:12.389384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5575,6 +5575,54 @@
       </key>
       <value>
         <dateTime>2007-06-13T00:13:09.137416-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\dal</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:09.6754816-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\dal\dbfieldattribute.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:13.090392-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\dal\dbhelper.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:13.991688-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\dal\dbparameterattribute.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:14.592552-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\dal\mapper.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:15.193416-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\link.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-06-24T23:09:16.7055904-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
