Add output caching to the content and archives controls. Add minimal logo. Fixed error where archives wouldn't show up for a day after entries had been archived.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -8,7 +8,7 @@
 	
 	<connectionStrings>
 		<remove name="longueurConnectionString"/>
-		<add name="longueurConnectionString" connectionString="Data Source=SLIM\SQLEXPRESS;Initial Catalog=Longueur;Integrated Security=True"/>
+		<add name="longueurConnectionString" connectionString="Data Source=adam-win;Initial Catalog=Longueur;Integrated Security=True"/>
 	</connectionStrings>
 	
 	<system.web>
