--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <DeployConfig>
+  <CompilationMode>InPlaceCompilation</CompilationMode>
   <SavePassword>true</SavePassword>
   <FtpServerOs>215 UNIX Type: L8</FtpServerOs>
   <FtpServerType>Serv-U FTP-Server v2.5i for WinSock ...</FtpServerType>
   <Validated>true</Validated>
+  <MsFtpUserPre>false</MsFtpUserPre>
   <StringReplacements>
     <StringReplacement>
       <FilePattern>\Web.Config</FilePattern>
@@ -45,6 +47,11 @@
       <LookFor>//urchinTracker();</LookFor>
       <ReplaceWith>urchinTracker();</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>Data Source=adam-win;Initial Catalog=Longueur;Integrated Security=True</LookFor>
+      <ReplaceWith>Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -64,6 +71,7 @@
     <Filter>*.gz</Filter>
     <Filter>*\Sql</Filter>
   </IgnoreFilters>
+  <UploadAssemblyWhenCs>true</UploadAssemblyWhenCs>
   <UploadLog>
     <item>
       <key>
@@ -230,7 +238,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-26T19:07:25.0787408-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:44.3035744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -246,7 +254,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:19:53.1475984-04:00</dateTime>
+        <dateTime>2007-07-21T14:52:14.3920016-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -262,7 +270,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:05:27.32336-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:40.0574688-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -326,7 +334,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:23:16.160272-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:40.387944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -662,7 +670,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:28:00.0785264-04:00</dateTime>
+        <dateTime>2007-07-21T15:23:33.7984688-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -686,7 +694,7 @@
         <string>\admin\thehillellis.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:05:32.3005168-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:41.5996864-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -790,7 +798,7 @@
         <string>\thehillellis\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:23:18.914232-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:45.7055904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -830,7 +838,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:10:36.01724-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:47.0074624-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -838,7 +846,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:21:17.038984-04:00</dateTime>
+        <dateTime>2007-07-21T15:23:34.3993328-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5350,7 +5358,7 @@
         <string>\thehillellis\permalink.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:10:35.416376-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:46.29644-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5438,7 +5446,7 @@
         <string>\thehillellis\archive.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:23.6013888-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:44.994568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5446,7 +5454,7 @@
         <string>\controls\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:23:16.3305168-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:40.5481744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5454,7 +5462,7 @@
         <string>\controls\blog\archives.ascx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:49:55.8099888-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:42.3006944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5462,7 +5470,7 @@
         <string>\controls\blog\archives.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:21.0877744-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:43.0017024-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5470,7 +5478,7 @@
         <string>\controls\blog\content.ascx</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:12:04.244104-04:00</dateTime>
+        <dateTime>2007-07-21T15:20:43.6025664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5631,5 +5639,5 @@
   <FtpUserID>adparadox</FtpUserID>
   <FtpPassword>Me1Vd3c1M4Q=</FtpPassword>
   <FtpPassive>true</FtpPassive>
-  <FtpRemotePath />
+  <FtpRemotePath>/c:/hosting/webhost4life/member/adparadox</FtpRemotePath>
 </DeployConfig>
